- Updated the flags of Dark Iron Pillow to allow every member of a group to loot it.

[2022-07-06]
- Added Filled Blood Gem to the loot table of Deranged Indu'le Villager for the quest In Service of Blood.
- Updated the flags of Filled Blood Gem to allow every member of a group to loot it.
- Added Filled Unholy Gem to the loot table of Duke Vallenhal for the quest In Service of the Unholy.
- Updated the flags of Filled Unholy Gem to allow every member of a group to loot it.
- Added Filled Frost Gem to the loot table of Ice Revenant for the quest In Service of Frost.
- Updated the flags of Filled Frost Gem to allow every member of a group to loot it.

[2022-07-20]
- Updated the respawn time of Scrying Orb.
- Added Strange Ore to the loot table of Risen Wintergarde Miner for the quest The Bleeding Ore.
- Updated the flags of Strange Ore to allow every member of a group to loot it.

[2022-07-21]
- Added the script for Sholazar Basin to make the quest Still At It give the item to every member of a group.
- Added the script for Sholazar Basin to make the quest Kick, What Kick? trigger for every member of a group.

[2023-01-13]
- Added Taillasher Egg to the loot table of Bloodtalon Taillasher for the quest Break a Few Eggs.
- Updated the flags of Taillasher Egg to allow every member of a group to loot it.
- Added Tirisfal Pumpkin to the loot table of Tirisfal Farmer for the quest Fields of Grief.
- Added Tirisfal Pumpkin to the loot table of Tirisfal Farmhand for the quest Fields of Grief.
- Updated the flags of Tirisfal Pumpkin to allow every member of a group to loot it.

[2023-01-15]
- Updated the flags of Discolored Worg Heart to allow every member of a group to loot it.

[2023-01-24]
- Added Shellfish to the loot table of Drysnap Crawler for the quest Fish in a Bucket.
- Added Shellfish to the loot table of Drysnap Pincer for the quest Fish in a Bucket.
- Updated the flags of Shellfish to allow every member of a group to loot it.