@@ -501,3 +501,8 @@
 - Added Shellfish to the loot table of Drysnap Crawler for the quest Fish in a Bucket.
 - Added Shellfish to the loot table of Drysnap Pincer for the quest Fish in a Bucket.
 - Updated the flags of Shellfish to allow every member of a group to loot it.
+
+[2023-01-29]
+- Added Hinterlands Honey Ripple to the loot table of Green Sludge for the quest A Sticky Situation.
+- Added Hinterlands Honey Ripple to the loot table of Jade Ooze for the quest A Sticky Situation.
+- Updated the flags of Hinterlands Honey Ripple to allow every member of a group to loot it.
